# docker_basics

./: Dockerfile  Dockerfile_multistage  README.md  predict.py  pyproject.toml  test.py  train.py
