[tool.poetry]
name = "docker_example"
version = "0.1.0"
description = ""
authors = ["LaurenzReitsam <laurenz.reitsam@otto.de>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "*"
numpy = "*"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
sklearn = "*"
pandas = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
